<resources>
    <string name="app_name">zerokata</string>
    <string name="player_one_0">Player 1 : 0</string>
    <string name="player_2_0">Player 2 : 0</string>
    <string name="reset">RESET</string>
    <string name="play">Play</string>
    <string name="offline">Offline</string>
    <string name="multi_player">Multi Player</string>
    <string name="single_player">Single Player</string>
    <string name="enter_joining_code">Enter Joining Code</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_join_code">Don\'t have an join code?</string>
    <string name="join">Join</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="player1_text">Player 1 : %d</string>
    <string name="player2_text">Player 2 : %d</string>
    <string name="turn">Turn :</string>
    <string name="turn_1">Turn : Player 1</string>
    <string name="turn_2">Turn : Player 2</string>
</resources>