<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".online_game_mode">

    <TextView
        android:id="@+id/player_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/player_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/block_on_00"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        android:onClick="Boxclicked"/>

    <Button
        android:id="@+id/block_on_01"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/block_on_00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        android:onClick="Boxclicked"/>

    <Button
        android:id="@+id/block_on_02"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:background="@drawable/round_button"
        android:onClick="Boxclicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toEndOf="@+id/block_on_00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/block_on_10"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:onClick="Boxclicked"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_on_00"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/block_on_11"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:onClick="Boxclicked"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@id/block_on_10"
        app:layout_constraintTop_toBottomOf="@id/block_on_01"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/block_on_12"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:onClick="Boxclicked"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@id/block_on_11"
        app:layout_constraintTop_toBottomOf="@id/block_on_02"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/block_on_20"
        android:layout_width="105dp"
        android:onClick="Boxclicked"
        android:layout_height="115dp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_on_10"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/block_on_21"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:onClick="Boxclicked"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toBottomOf="@id/block_on_11"
        app:layout_constraintStart_toEndOf="@id/block_on_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintVertical_bias="0.238"/>

    <Button
        android:id="@+id/block_on_22"
        android:layout_width="105dp"
        android:layout_height="115dp"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toBottomOf="@id/block_on_12"
        app:layout_constraintStart_toEndOf="@id/block_on_21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="Boxclicked"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintVertical_bias="0.238"/>

    <Button
        android:id="@+id/reset_on_button"
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/black"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_on_21"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/turn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>